# tauri-plugin-window-state

./: CHANGELOG.md  Cargo.toml  README.md
.changes/: config.json  fix-minimize.md  initial-release.md
.github/workflows/: covector-version-or-publish.yml
dist-js/: index.cjs  index.d.ts  index.js  index.min.js  index.min.js.map  index.mjs  index.mjs.map
examples/svelte-app/: package-lock.json  package.json
examples/svelte-app/src/: App.svelte
examples/svelte-app/src-tauri/: Cargo.toml  tauri.conf.json
examples/svelte-app/src-tauri/src/: main.rs
examples/tauri-app/: package.json
examples/tauri-app/src/: App.svelte
examples/tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
examples/tauri-app/src-tauri/src/: main.rs
examples/vanilla/src-tauri/: Cargo.toml  tauri.conf.json
src/: lib.rs
