[package]
name = "tauri-plugin-window-state"
version = "0.1.0"
authors = [ "Tauri Programme within The Commons Conservancy" ]
license = "Apache-2.0 OR MIT"
edition = "2021"

[dependencies]
tauri = { git = "https://github.com/tauri-apps/tauri/", branch = "next" }
serde = "1.0"
serde_json = "1.0"
bincode = "1.3"
